--- a/media-queries.html
+++ b/media-queries.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Media Queries</title>
+    <link rel="stylesheet" href="css/media-queries.css">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- ... -->
+    </head>
 </head>
 <body>
     <div class="alert-info hidden-on-desktop">
